--- a/style.css
+++ b/style.css
@@ -5,14 +5,12 @@
 }
 
 section  {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    margin: 5% auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 100%;
     border: 1px solid blue;
 }
 
