--- a/style.css
+++ b/style.css
@@ -4,33 +4,86 @@
     font-family: Arial, Helvetica, sans-serif;
     border: none;
     outline: none;
-    border: 1px solid violet;
+    box-sizing: border-box;
 }
 
 section  {
-    margin: 5% auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    border: 1px solid blue;
+    width: 90%;
 }
 
-#ok  {
-    width: 100%;
+section > h1  {
+    margin-bottom: 1rem;
 }
-input[type="text"]  {
-    width: 70%;
+
+section > div#inserirNome  {
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
 }
-/*
-.verde {
-    border: 1px solid green;
-}
-*/
 
 #saudacoes  {
     text-align: center;
+    font-size: 18px;
+}
+
+section > div > p.jogar1  {
+    color: #1E90FF;
+}
+section > div > p.jogar2  {
+    color: #f73d3d;
+}
+
+p.jogador  {
+    font-weight: 600;
+}
+
+input[type="text"]  {
+    padding: 5px;
+    width: calc(100% - 21.9%);
+    border-radius: 4px;
+    border: 1px solid #C0C0C0;
+}
+
+section > div > button#ok  {
+    width: 100%;
+    padding: 6px;
+    border-radius: 4px;
+    background-color: #6dc7f5;
+    color: aliceblue;
+    font-weight: 700;
+    border: 1.5px solid rgba(0,0,255,.5);
+}
+section > div > button#ok:hover  {
+    background-color: #1E90FF;
+}
+button  {
+    cursor: pointer;
+}
+button#btn  {
+    padding: 6px 13px;
+    margin-top: 1rem;
+    color: white;
+    font-weight: bold;
+    background-color: #1E90FF;
+    border-top-right-radius: 7px;
+    border-bottom-left-radius: 7px;
+}
+button#btn:hover  {
+    background-color: #6dc7f5;
+}
+
+p#rodada  {
+    margin: 1rem 0;
+    font-weight: 700;
 }
 
 .jogadores  {
@@ -41,15 +94,41 @@ input[type="text"]  {
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 8px;
 }
 
-#erro1, #erro2  {
-    display: none;
+.jogadores > div > h2#jog1  {
+    color: #1E90FF;
+}
+.jogadores > div > h2#jog2  {
+    color: #f73d3d;
 }
 
-button#reiniciar  {
-    text-align: center;
+.jogadores > div > input  {
+    width: 6.2rem;
+    padding: 4px 0;
+    border: 1px solid #C0C0C0;
+    padding-left: 6px;
 }
+
+button#regras-jogo  {
+    width: 20%;
+    padding: 2px 0;
+    border-top-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+    color: white;
+    margin-top: 3rem;
+    font-size: 20px;
+    font-weight: bold;
+    background-color: #00FF00;
+}
+
+button#regras-jogo:hover  {
+    color: #00FF00;
+    background-color: aliceblue;
+    border: 1px solid #00FF00;
+}
+
 
 
 
