--- a/_css/style.css
+++ b/_css/style.css
@@ -1,12 +1,3 @@
-*  {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
-    border: none;
-    outline: none;
-    box-sizing: border-box;
-}
-
 section  {
     position: absolute;
     top: 50%;
@@ -120,6 +111,41 @@ button#regras-jogo  {
     margin-top: 3rem;
     font-size: 20px;
     font-weight: bold;
+    background-color: #00FF00;
+    margin-bottom: 1rem;
+}
+
+div#regras  {
+    background-color: aliceblue;
+}
+div#regras > h3  {
+    margin-bottom: .7rem;
+}
+div#regras > h3:hover  {
+    text-transform: uppercase;
+}
+
+div#regras div  {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+button#esconder-regras  {
+    width: 30%;
+    padding: .3rem 0;
+    background-color: #6dc7f5;
+    color: aliceblue;
+    font-weight: 700;
+    border: 1.5px solid rgba(0,0,255,.5);
+    margin-top: 1rem;
+}
+
+div#regras > ol > li:hover  {
+    font-weight: bold;
+}
+div#regras > button:last-of-type  {
     background-color: #00FF00;
 }
 
